--- a/index.html
+++ b/index.html
@@ -4,17 +4,62 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Word Game</title>
+    <title>Look n Book</title>
+    <!-- MDB -->
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.css"
+    rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
+
   <body>
+
+    <header>
+      <!-- navbar -- can add more links (social, etc.) -->
+      <nav>
+        <h1>Look n Book</h1>
+        <a id="contact" href="#">Contact Us</a>
+      </nav>
+      
+      <section class="flex-container">
+        <section class="description col-md-6 ">
+          <h2 id="description-header">Pick your favorite places and make reservations at the same time</h2>
+          <p id="description-explanation" >No need to go to multiple websites to find the information you need. Just take a look at the places you might be interested, and then book a reservation!</p>  
+        </section>
+  
+        <div class="image-header">
+          <img id="glasses-books" src="./assets/looknbook.png" alt="books and glasses">
+        </div>  
+      </section>
+    </header>
+
+    <main>
+      <div class="location-form">
+        <form id="input-form" >
+          <label>Enter Zipcode: </label>
+          <input type="text">
+          <button>Search</button>
+        </form>
+      </div>
+
+      <!-- price -->
+      <!-- ratings -->
+      <!-- type of food -->
+  
+      
+    </main>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://random-words-api.vercel.app/word"></script>
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.js"
     ></script>
-    ;
+    <!-- MDB -->
+    <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.js"
+    ></script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
   </body>
 </html>
