--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <!-- navbar -- can add more links (social, etc.) -->
       <nav>
         <h1>Look n Book</h1>
+        <h2>homeslice</h2>
         <a id="contact" href="#">Contact Us</a>
       </nav>
       
