new function to put in movie title

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
       <br><br><br>
-      <section class="container">
+      <section class="container list-container">
         <h1>Watch List</h1>
         <div class="watchList row">
           <div class="inputVal col-md-12">
@@ -88,13 +88,6 @@
       <footer>Footer goes here</footer>
       
     </main>
-
-
-
-    <!-- <div class="theMoviesList">
-      <p class="pText">favorite movie</p>
-      <button class="deleteTask" onclick="deleteItems(${index})">x</button>
-    </div> -->
 
     <!-- <script src="https://apis.google.com/js/api.js"></script> -->
     <!-- <script src="https://www.youtube.com/iframe_api"></script> -->
