added a home button, and a place to feature the movie we suggest

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
           <img id="glasses-books" src="./assets/looknbook.png" alt="books and glasses">
         </div>  
       </section>
+
+      <!-- home button -->
+      <div class="home">
+        <button class="btn home-button hide">Home</button>
+      </div>
     </header>
 
     
@@ -50,6 +55,11 @@
             <button class="btn btn-danger generateBtn">Find Me a Movie</button>
           </div>
         
+          <div class="movie-suggestion hide">
+            <h2 class="text-center">Our Movie Suggestion</h2>
+            <p class="text-center" id="display-suggestion"></p>
+          </div>
+
         <section class="display-results row hide">
           <div class="col">
             <h2 id="youtube-header" class="text-center">Movie Trailers</h2>
