--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
 
   <body>
-    <header>
+    <!-- <header> -->
       <!-- navbar -- can add more links (social, etc.) -->
-      <nav>
+      <!-- <nav>
         <h1>Look n Book</h1>
         <a id="contact" href="#">Contact Us</a>
       </nav>
@@ -42,7 +42,7 @@
           />
         </div>
       </section>
-    </header>
+    </header> -->
 
     <main>
       <div class="location-form container">
@@ -50,7 +50,7 @@
           <!-- <label>Enter Zipcode: </label>
           <input type="text" /> -->
           <button class="btn-lg btn-danger" id="random-movie">
-            Random Movie!
+            RANDOM MOVIE
           </button>
         </form>
         <div class="row">
@@ -59,14 +59,18 @@
       </div>
 
       <section class="container">
-        <h1 id="youtube-header" class="text-center">Movie Trailer</h1>
+        <!-- <h1 id="youtube-header" class="text-center">Movie Trailer</h1> -->
         <form id="yt-player">
-          <div class="form-group">
+          <!-- <div class="form-group">
             <input type="text" class="form-control" id="search" />
-          </div>
-          <br />
+          </div> -->
+          <hr />
           <div class="form-group">
-            <input type="submit" class="btn btn-danger" value="Show Trailers" />
+            <input
+              type="submit"
+              class="btn btn-danger btn-lg"
+              value="Show Trailers"
+            />
           </div>
         </form>
 
