--- a/index.html
+++ b/index.html
@@ -40,11 +40,6 @@
           <img id="glasses-books" src="./assets/looknbook.png" alt="books and glasses">
         </div>  
       </section>
-
-      <!-- home button -->
-      <div class="home">
-        <button class="btn home-button hide">Home</button>
-      </div>
     </header>
 
     
@@ -54,10 +49,16 @@
           <div class="random-movie-generator">
             <button class="btn btn-danger generateBtn">Find Me a Movie</button>
           </div>
+
+             <!-- home button -->
+          <div class="home">
+            <button class="btn home-button hide">Home</button>
+          </div>
         
           <div class="movie-suggestion hide">
             <h2 class="text-center">Our Movie Suggestion</h2>
-            <p class="text-center" id="display-suggestion"></p>
+            <img class="text-center" id="movie-poster">
+            <p id="movie-description" class="text-center"></p>
           </div>
 
         <section class="display-results row hide">
