--- a/index.html
+++ b/index.html
@@ -4,27 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- need to change name -->
-    <title>Look n Book</title>
+    <title>QuickFlix</title>
     <!-- MDB -->
-    <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.css"
-    rel="stylesheet"
-    />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.css" rel="stylesheet"/>
+    <!-- css style sheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
 
-  <!-- TO DO: -->
-  <!-- new name -->
-  <!-- color scheme -->
-  <!-- readme file -->
-  <!-- new name for application -->
-  <!-- contact us info and page? -->
-  <!-- ideas? -->
-
   <body>
     <header>
-      <!-- navbar -- can add more links (social, etc.) -->
       <nav>
         <h1>Look n Book</h1>
         <a id="contact" href="#">Contact Us</a>
@@ -95,7 +83,6 @@
 
     <script src="https://apis.google.com/js/api.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.4/umd/popper.min.js"></script>
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.js"></script>
