Made changes to CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav>
-        <h1>Look n Book</h1>
+        <h1>QuickFlix</h1>
         <!-- <a id="contact" href="#">Contact Us</a> -->
       </nav>
       
@@ -35,12 +35,14 @@
     <main>
       <section class="container">
           <div class="random-movie-generator">
-            <button class="btn btn-danger generateBtn">Find Me a Movie</button>
+            <button class="btn home-button hide">Home</button>
+
+            <button class="btn generateBtn">Find Me a Movie</button>
           </div>
 
              <!-- home button -->
           <div class="home">
-            <button class="btn home-button hide">Home</button>
+            <!-- <button class="btn home-button hide">Home</button> -->
           </div>
         
           <div class="movie-suggestion hide">
