deleted clear button

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
               <div class="watchListItem"></div>
 
-              <button class="clear-task" onclick="clearTask()">Clear List</button>
+              <!-- <button class="clear-task" onclick="clearTask()">Clear List</button> -->
             </div>
           </section>
         </section>
